# ffaudio

./: README.md  demo.c  meson.build  mingw-win32.ini
src/: ffaudio.c  ffaudio.h
